<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/usercardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/platformspinner">

            <EditText
                android:id="@+id/usereditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:hint="@string/user"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/passcardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usercardView">

            <EditText
                android:id="@+id/passeditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <Spinner
            android:id="@+id/platformspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/insertbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/insertButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passcardView" />

        <Button
            android:id="@+id/clearbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearButton"
            app:layout_constraintEnd_toStartOf="@+id/cancelbutton"
            app:layout_constraintStart_toEndOf="@+id/insertbutton"
            app:layout_constraintTop_toBottomOf="@+id/passcardView" />

        <Button
            android:id="@+id/cancelbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passcardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
